--- a/README.org
+++ b/README.org
@@ -21,3 +21,6 @@
 *** TODO [#A] 支持双向链接
 *** TODO [#B] 支持力导向图
 *** TODO [#B] 支持悬浮预览
+*** TODO [#B] 增加 Google 分析
+*** DONE [#B] 增加 RSS 订阅支持
+CLOSED: [2023-02-13 一 12:25]
