feat(search): 优化搜索,增加快捷键,修改首页,优化样式

--- a/README.org
+++ b/README.org
@@ -16,14 +16,16 @@
 + headlessui
 + dayjs
 + flexsearch 浏览器全文检索
++ react-hotkeys-hook 快捷键管理
 
 ** 路线图
 *** TODO [#A] 增加元信息的解析
 *** TODO [#C] 支持版本记录查看(仅限 git 子仓库模式)
-*** TODO [#A] 支持双向链接
+*** TODO [#A] 支持显示反向链接
 *** TODO [#B] 支持力导向图
 *** TODO [#B] 支持悬浮预览
 *** TODO [#B] 增加 Google 分析
 *** DONE [#B] 增加 RSS 订阅支持
 CLOSED: [2023-02-13 一 12:25]
-*** TODO [#A] 搜索功能
+*** DONE [#A] 标搜题索功能
+*** TODO [#C] 全文搜索
